system/chartmuseum/chartmuseum.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chartmuseum
  namespace: chartmuseum
  labels:
    app: chartmuseum
spec:
  hostnames:
    - cm.domain.example.com
  parentRefs:
    - name: eg
      namespace: envoy-gateway
  rules:
    - backendRefs:
        - kind: Service
          name: chartmuseum
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
